--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header id="header">
     <nav id="nav-bar">
-      <img id="header-img" src="New folder/original_trombones.png" alt="logo" class="logo">
+      <img id="header-img" src="original_trombones.png" alt="logo" class="logo">
       <ul>
         <a class="nav-link" href="#features">Features</a>
         <a class="nav-link" href="#how-it-work">How It Works</a>
